Fix overflow

--- a/src/styles/sections/info.scss
+++ b/src/styles/sections/info.scss
@@ -108,7 +108,7 @@
             padding: 2rem;
             color: white;
             font-weight: lighter;
-            overflow-x: hidden;
+            overflow: hidden;
             background-color: $c-accent;
 
             * {
